# Systemy_Operacyjne_Projekt

./: CMakeLists.txt  Diagram.drawio  README.md  control.cpp  control.h  fan.cpp  fan.h  fan_inside_control.cpp  fan_inside_control.h  logs.cpp  logs.h  manager.cpp  manager.h  queue.cpp  queue.h  queue_control.cpp  queue_control.h  run.cpp  run_fan.cpp  run_manager.cpp  technic.cpp  technic.h  utils.cpp  utils.h  visualization.py
tests/: run.cpp  test_fan.cpp  test_fan_inside_control.cpp  test_manager.cpp  utils.cpp
videos/: przedstawienie_wizualizacji.mov
